fix: fix overlay of password text and password visibility button

--- a/front-end/src/styles/blocks/profile.scss
+++ b/front-end/src/styles/blocks/profile.scss
@@ -117,6 +117,10 @@
   }
 }
 
+.profile-password-input {
+  @include password-input;
+}
+
 .profile-password-visibility-btn {
   right: 1rem;
 
