--- a/front-end/src/styles/common/mixins.scss
+++ b/front-end/src/styles/common/mixins.scss
@@ -136,6 +136,10 @@
   }
 }
 
+@mixin password-input {
+  padding-right: 4rem;
+}
+
 @mixin default-avatar {
   width: 100%;
   border-radius: 50%;
